--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@ nav a:hover{
 	border-radius: 5px;
 	box-shadow: 5px 5px #888;
 }
+.active
+{
+	background: white;
+	color: black!important;
+	border-radius: 5px;
+	box-shadow: 5px 5px #888;
+}
