--- a/style.css
+++ b/style.css
@@ -1,24 +1,146 @@
-nav{
-	transition-duration: 0.5s;
-	box-shadow: 50px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-nav a{
-	color: white;
-	background: transparent;
-	padding-right: 5px;
-}
-nav a:hover{
-	background: white;
-	color: black;
-	border-radius: 5px;
-	box-shadow: 5px 5px #888;
-}
-.activated
+body 
 {
-	background: white;
-	color: black!important;
-	border-radius: 5px;
+	background-image: url('1.jpeg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
+.button
+{
+	display: inline-block;
+	border-radius: 4px;
+	background-color: transparent;
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 20px;
+	width: 125px;
+	height: 75px;
+	transition: all 0.2s;
+	cursor: pointer;
+	vertical-align:middle;
+	margin: 5%;
+	backdrop-filter: blur(20px);
+	border-radius: 4px;
+}
+.button span 
+{
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+}
+.button span:after 
+{
+	content: '\00bb';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -10px;
+	transition: 0.5s;
+}
+.button:hover span
+{
+	padding-right: 15px;
+}
+.button:hover span:after
+{
+	opacity: 1;
+	right: 0;
+}
+.button:active
+{
+	background-color: #425363;
+	box-shadow: 0 5px #666;
+	transform: translateY(10px);
+}
+.header 
+{
+	overflow: hidden;
+	background-color: transparent;
+	padding-left: 80px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+	padding-right: 80px;
+}
+.header a 
+{
+	float: left;
+	color: black;
+	text-align: center;
+	padding: 10px;
+	text-decoration: none;
+	font-size: 18px;
+	line-height: 25px;
+	border-radius: 4px;
+	color:white;
+}
+.header a.logo 
+{
+	font-size: 25px;
+	font-weight: bold;
+}
+.header a:hover 
+{
+	background-color: #ffffff;
+	color: black;
 	box-shadow: 5px 5px #888;
+}
+.header a.active 
+{
+	background-color: #ffffff;
+	color: black;
+	box-shadow: 5px 5px #888;
+}
+.header-right 
+{
+	float: right;
+}
+@media screen and (max-width: 500px) 
+{
+	.header a 
+	{
+		float: none;
+		display: block;
+		text-align: left;
+	}
+	.header-right 
+	{
+		float: none;
+	}
+}
+#level
+{
+	color: #ffffff; 
+	padding-top: 20px;
+	padding-bottom: 20px; 
+	text-align: center;
+	font-family: consolas; 
+	border:2px solid #ffffff;
+	border-radius: 25px;
+	backdrop-filter: blur(20px);
+	margin-top: 30px;
+}
+.sub
+{
+	color: #ffffff;
+	text-align: center;
+	font-family: consolas; 
+	border:2px solid #ffffff;
+	border-radius: 25px;
+	backdrop-filter: blur(5px);
+	margin-top: 80px;
+	padding-top: 20px;
+	float: left;
+	width:40%;
+	margin:4%;
+}
+#copyright
+{
+	color: #ffffff;
+	text-align:left;
+}
+#work
+{
+	color: #ffffff;
+	text-align: right;
 }
