--- a/style.css
+++ b/style.css
@@ -53,59 +53,25 @@ body
 	box-shadow: 0 5px #666;
 	transform: translateY(10px);
 }
-.header 
+
+@media screen and (max-width: 800px) 
 {
-	overflow: hidden;
-	background-color: transparent;
-	padding-left: 80px;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	padding-right: 80px;
-}
-.header a 
-{
-	float: left;
-	color: black;
-	text-align: center;
-	padding: 10px;
-	text-decoration: none;
-	font-size: 18px;
-	line-height: 25px;
-	border-radius: 4px;
-	color:white;
-}
-.header a.logo 
-{
-	font-size: 25px;
-	font-weight: bold;
-}
-.header a:hover 
-{
-	background-color: #ffffff;
-	color: black;
-	box-shadow: 5px 5px #888;
-}
-.header a.active 
-{
-	background-color: #ffffff;
-	color: black;
-	box-shadow: 5px 5px #888;
-}
-.header-right 
-{
-	float: right;
-}
-@media screen and (max-width: 500px) 
-{
-	.header a 
-	{
-		float: none;
-		display: block;
-		text-align: left;
+	.sub{
+		width:10%!important;
+		padding: 0!important;
+		margin-left: 0!important;
+		margin-right: 0!important;
+		margin-bottom: 0!important;
+		margin-top: 80px;
 	}
-	.header-right 
-	{
-		float: none;
+	.button{
+		width: 120px;
+		height: 70px;
+	}
+	h1{
+		padding-top: 10px;
+		padding-bottom: 10px;
+		margin-top: 15px;
 	}
 }
 #level
