--- a/style1.css
+++ b/style1.css
@@ -13,14 +13,14 @@ body
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 30px;
-	width: 40%;
+	width: 100%;
 	height: 300px;
 	transition: all 0.2s;
 	cursor: pointer;
 	vertical-align:middle;
 	backdrop-filter: blur(40px);
 	border-radius: 8px;
-	margin:3%;
+	margin-top: 50px;
 }
 .button span 
 {
@@ -53,57 +53,11 @@ body
 	box-shadow: 0 5px #666;
 	transform: translateY(10px);
 }
-.header 
+@media screen and (max-width: 800px) 
 {
-	overflow: hidden;
-	background-color: transparent;
-	padding-left: 80px;
-	padding-bottom: 10px;
-	padding-top: 10px;
-	padding-right: 80px;
-}
-.header a 
-{
-	float: left;
-	color: black;
-	text-align: center;
-	padding: 12px;
-	text-decoration: none;
-	font-size: 18px;
-	line-height: 25px;
-	border-radius: 4px;
-	color:white;
-}
-.header a.logo 
-{
-	font-size: 25px;
-	font-weight: bold;
-}
-.header a:hover 
-{
-	background-color: #ffffff;
-	color: black;
-}
-.header a.active 
-{
-	background-color: #ffffff;
-	color: black;
-}
-.header-right 
-{
-	float: right;
-}
-@media screen and (max-width: 500px) 
-{
-	.header a 
-	{
-		float: none;
-		display: block;
-		text-align: left;
-	}
-	.header-right 
-	{
-		float: none;
+	.button{
+		width:100%;
+		height: : auto;
 	}
 }
 #level
@@ -117,10 +71,6 @@ body
 	border-radius: 25px;
 	backdrop-filter: blur(20px);
 	margin-top: 30px;
-}
-#cont
-{
-	padding-left: 5%;
 }
 #copyright
 {
