--- a/s9.css
+++ b/s9.css
@@ -1,6 +1,8 @@
-*{
-    margin: 2; padding: 0;
+h1,h2, {
     font-family: 'Josefin Sans' , sans-serif;
+}
+.button{
+	font-family: 'Josefin Sans' , sans-serif;
 }
 body 
 {
