--- a/s9.css
+++ b/s9.css
@@ -104,6 +104,8 @@ header a.activated
 {
 	color: #ffffff; 
 	padding-top: 20px;
+	margin-top: 50px;
+	margin-bottom: 50px;
 	padding-bottom: 20px; 
 	text-align: center;
 	border:2px solid #ffffff;
