--- a/s9.css
+++ b/s9.css
@@ -1,133 +1,121 @@
-h1,h2, {
-    font-family: 'Josefin Sans' , sans-serif;
+body {
+    background-image: url('note.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-.button{
-	font-family: 'Josefin Sans' , sans-serif;
+
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: transparent;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    width: 230px;
+    height: 120px;
+    transition: all 0.2s;
+    cursor: pointer;
+    vertical-align: middle;
+    margin: 5%;
+    backdrop-filter: blur(20px);
+    border-radius: 4px;
 }
-body 
-{
-	background-image: url('note.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
 }
-.button
-{
-	display: inline-block;
-	border-radius: 4px;
-	background-color: transparent;
-	color: #FFFFFF;
-	text-align: center;
-	font-size: 20px;
-	width: 230px;
-	height: 120px;
-	transition: all 0.2s;
-	cursor: pointer;
-	vertical-align:middle;
-	margin: 5%;
-	backdrop-filter: blur(20px);
-	border-radius: 4px;
+
+.button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -10px;
+    transition: 0.5s;
 }
-.button span 
-{
-	cursor: pointer;
-	display: inline-block;
-	position: relative;
-	transition: 0.5s;
+
+.button:hover span {
+    padding-right: 15px;
 }
-.button span:after 
-{
-	content: '\00bb';
-	position: absolute;
-	opacity: 0;
-	top: 0;
-	right: -10px;
-	transition: 0.5s;
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
 }
-.button:hover span
-{
-	padding-right: 15px;
+
+.button:active {
+    background-color: #2d1f16;
+    box-shadow: 0 5px #666;
+    transform: translateY(10px);
 }
-.button:hover span:after
-{
-	opacity: 1;
-	right: 0;
+
+header {
+    overflow: hidden;
+    background-color: transparent;
 }
-.button:active
-{
-	background-color: #2d1f16;
-	box-shadow: 0 5px #666;
-	transform: translateY(10px);
+
+header a {
+    float: left;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    color: white;
 }
-header 
-{
-	overflow: hidden;
-	background-color: transparent;
+
+header a:hover {
+    background-color: #ffffff!important;
+    color: black!important;
+    box-shadow: 5px 5px #888!important;
 }
-header a 
-{
-	float: left;
-	color: black;
-	text-align: center;
-	text-decoration: none;
-	font-size: 18px;
-	line-height: 25px;
-	border-radius: 4px;
-	color:white;
+
+header a.activated {
+    background-color: #ffffff!important;
+    color: black!important;
+    box-shadow: 5px 5px #888!important;
 }
-header a:hover 
-{
-	background-color: #ffffff!important;
-	color: black!important;
-	box-shadow: 5px 5px #888!important;
+
+@media screen and (max-width: 500px) {
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .header-right {
+        float: none;
+    }
 }
-header a.activated
-{
-	background-color: #ffffff!important;
-	color: black!important;
-	box-shadow: 5px 5px #888!important;
+
+#level {
+    color: #ffffff;
+    padding-top: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+    text-align: center;
+    border: 2px solid #ffffff;
+    border-radius: 25px;
+    backdrop-filter: blur(20px);
 }
-@media screen and (max-width: 500px) 
-{
-	.header a 
-	{
-		float: none;
-		display: block;
-		text-align: left;
-	}
-	.header-right 
-	{
-		float: none;
-	}
+
+.sub {
+    padding-top: 50px;
+    color: #ffffff;
+    text-align: center;
+    border: 2px solid #ffffff;
+    border-radius: 25px;
+    backdrop-filter: blur(20px);
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-#level
-{
-	color: #ffffff; 
-	padding-top: 20px;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	padding-bottom: 20px; 
-	text-align: center;
-	border:2px solid #ffffff;
-	border-radius: 25px;
-	backdrop-filter: blur(20px);
-}
-.sub
-{
-	padding-top: 50px;
-	color: #ffffff;
-	text-align: center;
-	border:2px solid #ffffff;
-	border-radius: 25px;
-	backdrop-filter: blur(20px);
-	margin-top: 30px;
-	margin-bottom: 30px;
-}
-.left-col h2
-{
-	height: 100px;
-	color: rgb(248, 249, 255);
-}
-ul
-{
+
+.left-col h2 {
+    height: 100px;
+    color: rgb(248, 249, 255);
 }
