--- a/s9.css
+++ b/s9.css
@@ -3,6 +3,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    background-size: 100% 120%;
+    width: 100%;
+    height: 100vh;
 }
 
 .button {
