--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 body 
 {
-	background-image: url('creative10.jpg');
+	background-image: url('3.jpeg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
