--- a/style1.css
+++ b/style1.css
@@ -49,7 +49,7 @@ body
 }
 .button:active
 {
-	background-color: #6b644f;
+	background-color: #12345f;
 	box-shadow: 0 5px #666;
 	transform: translateY(10px);
 }
