--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 body 
 {
-	background-image: url('creative100.jpeg');
+	background-image: url('creative.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
@@ -49,7 +49,7 @@ body
 }
 .button:active
 {
-	background-color: #12345f;
+	background-color: #a06044;
 	box-shadow: 0 5px #666;
 	transform: translateY(10px);
 }
