--- a/video.css
+++ b/video.css
@@ -1,7 +1,68 @@
-body {
-    background-color: #12375f;
+body 
+{
+	background-image: url('videoback.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 }
-#level
+
+.button
+{
+	display: inline-block;
+	border-radius: 10px;
+	background-color: transparent;
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 30px;
+	width: 100%;
+	height: 300px;
+	transition: all 0.2s;
+	cursor: pointer;
+	vertical-align:middle;
+	backdrop-filter: blur(40px);
+	border-radius: 8px;
+	margin-top: 50px;
+}
+.button span 
+{
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+}
+.button span:after 
+{
+	content: '\00bb';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -10px;
+	transition: 0.5s;
+}
+.button:hover span
+{
+	padding-right: 25px;
+}
+.button:hover span:after
+{
+	opacity: 1;
+	right: 0;
+}
+.button:active
+{
+	background-color: #656c6b;
+	box-shadow: 0 5px #666;
+	transform: translateY(10px);
+}
+@media screen and (max-width: 800px) 
+{
+	.button{
+		width:100%;
+		height: : auto;
+	}
+}
+
+.level
 {
 	color: #ffffff; 
 	padding-top: 20px;
