--- a/video.css
+++ b/video.css
@@ -61,7 +61,7 @@
 	padding-bottom: 20px; 
 	text-align: center;
 	font-family: consolas; 
-	border:2px solid #ffffff;
+	border:2px solid #000000;
 	border-radius: 25px;
 	backdrop-filter: blur(20px);
     margin-top: 30px;
