--- a/video.css
+++ b/video.css
@@ -54,6 +54,14 @@
 	}
 }
 
+iframe{
+	margin-top: 25px;
+}
+
+h2{
+	margin-top: 100px!important;
+}
+
 .level
 {
 	color: #ffffff; 
@@ -64,6 +72,5 @@
 	border:2px solid #000000;
 	border-radius: 25px;
 	backdrop-filter: blur(20px);
-    margin-top: 30px;
-    margin-bottom: 80px;
+    margin-top: 50px;
 }
